--- a/clothing/clothing.html
+++ b/clothing/clothing.html
@@ -179,5 +179,5 @@
         <p>© 2025 ReCircle BeninMart. All rights reserved.</p>
     </div>
 </footer>
-<script src="/index.js"></script>
+<script src="../index.js"></script>
 </html>
