--- a/clothing/clothing.html
+++ b/clothing/clothing.html
@@ -35,11 +35,11 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="menu_links" style="blue;">
-                <li><a href="../index.html" onclick="toggle_menu()">HOME</a></li>
-                <li><a href="../index.html" onclick="toggle_menu()">Clothing</a></li>
-                <li><a href="../index.html" onclick="toggle_menu()">Home & Kitchen</a></li>
-                <li><a href="#contact" onclick="toggle_menu()">contact</a></li>
+            <div class="menu_links" >
+                <li><a href="../index.html" onclick="toggle_menu()" style="blue;">HOME</a></li>
+                <li><a href="../index.html" onclick="toggle_menu()" style="blue;">Clothing</a></li>
+                <li><a href="../index.html" onclick="toggle_menu()" style="blue;">Home & Kitchen</a></li>
+                <li><a href="#contact" onclick="toggle_menu()" style="blue;">contact</a></li>
             </div>
         </div>
         <!-- clothing section -->
