--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </section>
     
     <section style="text-align: center; padding: 20px;">
-    <h2>♻️ ReCircle BeninMart — Safe & Easy Buying & Selling in Benin</h2>
+    <h2>♻️ ReCircle BeninMart Safe & Easy Buying & Selling in Benin</h2>
     <p>
         Turn your unused items into cash or discover great deals from trusted sellers around Benin.
         At ReCircle BeninMart, every transaction is secured through an escrow system,
-        giving both buyers and sellers peace of mind. No scams, no stress — just smooth, verified deals.
+        giving both buyers and sellers peace of mind. No scams, no stress just smooth, verified deals.
     </p>
 
     <h3>✅ What You Can Do Here</h3>
